fix: resolve layout bugs and change media query to 475px

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  /* outline: 2px solid red; */
+  outline: 2px solid red;
   margin: 0;
   box-sizing: border-box;
 }
@@ -76,6 +76,10 @@ button {
   border-radius: 8px;
   font-weight: bold;
   transition-duration: 0.4s;
+}
+
+.hero-text a {
+  align-self: flex-start;
 }
 
 .hero-text button {
@@ -197,15 +201,13 @@ button a:visited {
   margin-bottom: 0.5rem;
 }
 
-@media screen and (max-width: 425px) {
-  body {
-    max-width: 420px;
-  }
+@media screen and (max-width: 475px) {
 
   .header {
     font-size: 10px;
     gap: 1px;
-    width: 400px;
+    max-width: 100%;
+    padding: 0 1rem;
   }
 
   .header img {
@@ -219,8 +221,7 @@ button a:visited {
   .hero-second,
   .header-link {
     font-size: 10px;
-    margin-right: 1rem;
-  }
+    }
 
   .hero-main {
     font-size: 2rem;
@@ -230,22 +231,15 @@ button a:visited {
     height: 550px;
     flex-direction: column;
     justify-content: space-around;
-    margin-bottom: 1rem;
-    width: 385px;
-  }
-
-  .vid {
-    align-self: flex-start;
+    margin-bottom: 1.5rem;
+    max-width: 100%;
+    padding: 0 1.2rem;
+    gap: 1rem;
   }
 
   iframe {
-    width: 370px;
+    max-width: 100%;
     height: 250px;
-
-  }
-
-  .hero-text button {
-    padding: 8px 160px;
   }
 
   .information-section h1 {
@@ -255,11 +249,12 @@ button a:visited {
   }
 
   .information-section {
-    height: 700px;
+    height: 1050px;
+    max-width: 100%;
   }
 
   .info img {
-    width: 100px;
+    max-width: 100px;
   }
 
   .container {
@@ -267,7 +262,8 @@ button a:visited {
     flex-wrap: wrap;
     justify-content: center;
     gap: 35px;
-    width: 100%;
+    max-width: 100%;
+    padding: 0 5rem;
   }
 
   .info {
@@ -275,55 +271,47 @@ button a:visited {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    max-width: 150px;
+    max-width: 100%;
   }
 
   #quote-section {
     height: 400px;
     font-size: 1.5rem;
+    max-width: 100%;
+    padding: 0 2rem;
   }
 
   .quote {
-    max-width: 350px;
     margin-top: 0rem;
+  }
+
+  #modal {
+    max-width: 100%;
+    padding: 0 2rem;
   }
 
   .pop {
     height: 155px;
-    width: 370px;
     border-radius: 0.5rem;
     flex-direction: column;
     justify-content: space-evenly;
     padding: 0px 1rem;
-    font-size: 14px;
+    font-size: 10px;
+    max-width: 100%;
   }
 
   #modal button {
-    background-color: #3882f6;
-    border: 2px solid white;
-    padding: 8px 142px;
+    width: 100%;
+    padding: 8px;
   }
 
-  button:hover a:link,
-  button:hover a:visited {
-    color: #3882f6;
-    transition-duration: 0.4s;
-    text-decoration: none;
-  }
-
-  button a:link,
-  button a:visited {
-    color: white;
-    transition-duration: 0.4s;
-    text-decoration: none;
+  #modal a {
+    width: 100%;
   }
 
   .footer {
     font-size: 10px;
     height: 55px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
 }
